# ADA_TF_G04

./: README.md
ClinicaSimulacion/: CMakeLists.txt
ClinicaSimulacion/include/implementations/: AsignadorBalanceado.h  RegistroEficiente.h  SchedulerOptimizado.h
ClinicaSimulacion/include/interfaces/: IAsignadorPersonal.h  IRegistroPacientes.h  ISchedulerCitas.h
ClinicaSimulacion/include/models/: Cita.h  Medico.h  Paciente.h
ClinicaSimulacion/src/: main.cpp  server.cpp
ClinicaSimulacion/src/implementations/: AsignadorBalanceado.cpp  RegistroEficiente.cpp  SchedulerOptimizado.cpp
ClinicaSimulacion/web/: index.html  styles.css
